# many-model-forecasting

./: .gitignore  01_mm_forecasting_demo.py  01_mmf_univariate_daily_demo.py  01_mmf_univariate_monthly_demo.py  02_mm_rossmann_forecasting.py  02_mm_rossmann_forecasting_v1.py  CLAUDE.md  LICENSE  README.md  RUNME.py  constraints.txt  databricks.yml  delta_table_management.ipynb  demo_global_daily.py  demo_global_external_regressors_daily.py  demo_global_monthly.py  demo_local_univariate_daily.py  demo_local_univariate_external_regressors_daily.py  demo_local_univariate_monthly.py  pyproject.toml  pytest.ini  requirements-foundation.txt  requirements-global.txt  requirements-local.txt  requirements.txt  requirements_db.txt  testing_development.ipynb
.devcontainer/: Dockerfile  devcontainer.json
SPECS/: TEST_NOSPARK.md
apps/: README.md  app.py  app.yaml  requirements.txt
documentation/: build.md
examples/: foundation_daily.py  foundation_external_regressors_daily.py  foundation_hourly.py  foundation_monthly.py  foundation_weekly.py  global_daily.py  global_external_regressors_daily.py  global_hourly.py  global_monthly.py  global_weekly.py  licenses.py  local_univariate_daily.py  local_univariate_external_regressors_daily.py  local_univariate_hourly.py  local_univariate_monthly.py  local_univariate_weekly.py  post-evaluation-analysis.ipynb  run_daily.ipynb  run_daily.py  run_external_regressors_daily.ipynb  run_external_regressors_daily.py  run_hourly.ipynb  run_hourly.py  run_monthly.ipynb  run_monthly.py  run_weekly.ipynb  run_weekly.py
forecasting_sa/: AutoEDA.py  Forecaster.py  __init__.py  base_forecasting_conf.yaml  data_quality_checks.py
mmf_sa/: AutoEDA.py  Forecaster.py  README.md  __init__.py  base_forecasting_conf.yaml  common.py  data_quality_checks.py  exceptions.py  forecasting_conf.yaml  forecasting_conf_daily.yaml  forecasting_conf_hourly.yaml  forecasting_conf_monthly.yaml  forecasting_conf_weekly.yaml  reconciliation.py
notebooks/: demo_foundation_daily.py  demo_foundation_monthly.py  demo_global_daily.py  demo_global_external_regressors_daily.py  demo_global_monthly.py  demo_local_univariate_daily.py  demo_local_univariate_external_regressors_daily.py  demo_local_univariate_monthly.py  run_external_regressors_daily.py  run_global_daily.py  run_global_external_regressors_daily.py  run_global_monthly.py  run_monthly.py
skills/.test/: README.md  pyproject.toml
skills/.test/scripts/: _common.py  run_eval.py
skills/.test/skills/many-model-forecasting/: candidates.yaml  ground_truth.yaml  manifest.yaml
skills/.test/src/skill_test/: __init__.py  config.py  dataset.py
skills/.test/src/skill_test/cli/: __init__.py  commands.py
skills/.test/src/skill_test/fixtures/: __init__.py  setup.py
skills/.test/src/skill_test/grp/: __init__.py  diagnosis.py  executor.py  pipeline.py  reviewer.py
skills/.test/src/skill_test/mock/: __init__.py  agent_runner.py  duckdb_backend.py  fixtures.py  mock_tools.py
skills/.test/src/skill_test/optimize/: __init__.py  alignment.py  asi.py  assertions.py  config.py  judges.py  review.py  runner.py  skillbench_evaluator.py  splitter.py  tools.py  utils.py
skills/.test/src/skill_test/runners/: __init__.py  compare.py  evaluate.py
skills/.test/src/skill_test/scenarios/: __init__.py  generators.py  scenarios.py
skills/.test/src/skill_test/scorers/: __init__.py  dynamic.py  routing.py  trace.py  universal.py
skills/.test/src/skill_test/trace/: __init__.py  mlflow_integration.py  models.py  parser.py  source.py
skills/.test/tests/: __init__.py  test_scorers.py
skills/.test/tests/tier1/: conftest.py  test_explore_data.py  test_post_evaluate.py  test_profile_series.py  test_run_mmf.py  test_setup_cluster.py
(+493 files in other folders)
