[project]
name = "mmf_sa"
version = "0.0.1"
dependencies = [
    #"rpy2==3.5.16",  # causes issue when deploying the model to Model Serving
    "kaleido==0.2.1",
    "Jinja2",
    "omegaconf==2.3.0",
    "statsforecast==1.7.4",
    "neuralforecast==2.0.0",
    "missingno==0.5.2",
    "tbats==1.1.3",
    "sktime==0.29.0",
    "lightgbm==4.3.0",
    "datasetsforecast==0.0.8",
    "fugue==0.9.0",
]

[project.optional-dependencies]
tests = [
    "setuptools",
    "wheel",
    "pyyaml",
    "dbx",
    "pytest",
    "pytest-cov",
    "pyspark==3.3.0",
    "PyArrow>=1.0.0",
    "sqlalchemy",
    "alembic",
    "hyperopt",
    "plotly",
    "black",
    "datasetsforecast"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "mmf_sa/",
]
exclude = [
    "/tests",
]
