[project]
name = "mmf_sa"
version = "0.0.1"
dependencies = [
    "omegaconf==2.3.0",
    "statsforecast==2.0.0",
    "neuralforecast==2.0.0",
    "tbats==1.1.3",
    "sktime==0.29.0",
    "lightgbm==4.3.0",
    "datasetsforecast==0.0.8",
]

[project.optional-dependencies]
tests = [
    "setuptools",
    "wheel",
    "pyyaml",
    "pytest",
    "pytest-cov",
    "pyspark==3.3.0",
    "PyArrow>=1.0.0",
    "sqlalchemy",
    "alembic",
    "hyperopt",
    "plotly",
    "black",
    "datasetsforecast"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "mmf_sa/",
]
exclude = [
    "/tests",
]
